--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       crossorigin="anonymous"
     />
 
+    <!--animated css-->
+    <link rel="stylesheet" href="/Bootstrap/css/animate.min.css" />
+
     <!-- fontawesome-free-5-->
     <link
       rel="stylesheet"
@@ -23,14 +26,14 @@
     />
 
     <!--main css-->
-    <link rel="stylesheet" href="Bootstrap/css/main.css">
+    <link rel="stylesheet" href="Bootstrap/css/main.css" />
 
     <title>Hello, world!</title>
   </head>
 
   <body>
     <!--Banner section-->
-    <section id="banner"> 
+    <section id="banner">
       <div id="banner-content">
         <div id="banner-box">
           <h1><strong>Ife.Charles</strong></h1>
@@ -40,39 +43,105 @@
       </div>
 
       <div id="banner-icon">
-        <a href="#Services"><i class="fa fa-angle-double-down"></i></</a>
+        <a href="#services" class="wow bounce" data-wow-iteration="infinite"
+          ><i class="fa fa-angle-double-down "></i
+        ></a>
       </div>
-
     </section>
     <!--End of banner section-->
 
     <!--Start of Services section-->
-    
+    <section id="services">
+      <div class="container">
+        <!--    start of header-->
+        <div class="header text-center">
+          <h1><strong>services</strong></h1>
+          <div class="header-underline"></div>
+          <p class="text-muted">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Reprehenderit, vitae?
+          </p>
+        </div>
+        <!--    end of header-->
 
+        <div class="row">
+          <div class="col-md-4 col-sm-6 services-container text-center">
+            <i class="fa fa-desktop"></i>
+            <h2><strong>Services</strong></h2>
+            <p class="text-muted">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Accusantium nulla tenetur ab amet beatae eaque doloribus,
+              deserunt, natus quod officiis, reprehenderit nihil! Dicta animi
+              exercitationem veritatis accusamus, fugiat totam eum.
+            </p>
+          </div>
+        </div>
 
+        <div class="col-md-4 col-sm-6 services-container text-center">
+          <i class="fa fa-mobile"></i>
+          <h2><strong>Services</strong></h2>
+          <p class="text-muted">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium nulla tenetur ab amet beatae eaque doloribus, deserunt,
+            natus quod officiis, reprehenderit nihil! Dicta animi exercitationem
+            veritatis accusamus, fugiat totam eum.
+          </p>
+        </div>
 
+        <div class="col-md-4 col-sm-6 services-container text-center">
+          <i class="fa fa-archive"></i>
+          <h2><strong>Services</strong></h2>
+          <p class="text-muted">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium nulla tenetur ab amet beatae eaque doloribus, deserunt,
+            natus quod officiis, reprehenderit nihil! Dicta animi exercitationem
+            veritatis accusamus, fugiat totam eum.
+          </p>
+        </div>
 
+        <div class="col-md-4 col-sm-6 services-container text-center">
+          <i class="fa fa-cubes"></i>
+          <h2><strong>Services</strong></h2>
+          <p class="text-muted">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium nulla tenetur ab amet beatae eaque doloribus, deserunt,
+            natus quod officiis, reprehenderit nihil! Dicta animi exercitationem
+            veritatis accusamus, fugiat totam eum.
+          </p>
+        </div>
 
+        <div class="col-md-4 col-sm-6 services-container text-center">
+          <i class="fa fa-envelope"></i>
+          <h2><strong>Services</strong></h2>
+          <p class="text-muted">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium nulla tenetur ab amet beatae eaque doloribus, deserunt,
+            natus quod officiis, reprehenderit nihil! Dicta animi exercitationem
+            veritatis accusamus, fugiat totam eum.
+          </p>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="col-md-4 col-sm-6 services-container text-center">
+          <i class="fa fa-magnet"></i>
+          <h2><strong>Services</strong></h2>
+          <p class="text-muted">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium nulla tenetur ab amet beatae eaque doloribus, deserunt,
+            natus quod officiis, reprehenderit nihil! Dicta animi exercitationem
+            veritatis accusamus, fugiat totam eum.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!--endof Services section-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+    <!--wow js-->
+    <script src="/Bootstrap/js/wow.min.js"></script>
+    <script src="/Bootstrap/js/wow.js"></script>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
