created and styled the promise section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,58 @@
         </div>
       </div>
     </section>
-    <!--endof Services section-->
+    <!--end of Services section-->
+
+    <!--promise our section-->
+    <section id="promise">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-6 promise-picture"></div>
+
+          <div class="col-sm-6 promise-text">
+            <!--    start of header-->
+            <div class="header text-center">
+              <h1><strong>Promise</strong></h1>
+              <div class="header-underline"></div>
+              <p class="text-muted">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit, vitae?
+              </p>
+            </div>
+            <!--    end of header-->
+            <div class="promise-icons">
+              <div>
+                <h2>
+                  <i class="fa fa-thumbs-up"></i>
+                  Promise
+                </h2>
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dicta, necessitatibus.
+                </p>
+              </div>
+
+              <div>
+                <h2><i class="fa fa-thumbs-up"></i>Promise</h2>
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dicta, necessitatibus.
+                </p>
+              </div>
+
+              <div>
+                <h2><i class="fa fa-thumbs-up"></i>Promise</h2>
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dicta, necessitatibus.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of promise section-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
