created and stlyed skills and Next project section

--- a/index.html
+++ b/index.html
@@ -186,6 +186,117 @@
     </section>
     <!-- end of promise section-->
 
+    <!--skills  section-->
+    <section id="skills">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6"></div>
+
+          <!--    start of header-->
+          <div class="header text-center">
+            <h1><strong>skills</strong></h1>
+            <div class="header-underline"></div>
+            <p class="text-muted">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Reprehenderit, vitae?
+            </p>
+            <!--    end of header-->
+          </div>
+          <div class="col-sm-6 bars"></div>
+
+          <!--html progress bar-->
+          <div>
+            <h4>HTML5</h4>
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width:60%;"
+              ></div>
+            </div>
+          </div>
+
+          <!--css progress bar-->
+          <div>
+            <h4>CSS</h4>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-success"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width:60%;"
+              ></div>
+            </div>
+          </div>
+
+          <!--js progress bar-->
+          <div>
+            <h4>JavaScript</h4>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-info"
+                role="progressbar"
+                ariavaluenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width:60%;"
+              ></div>
+            </div>
+          </div>
+
+          <!--Jango progress bar-->
+          <div>
+            <h4>Jango</h4>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-info"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width:60%;"
+              ></div>
+            </div>
+          </div>
+
+          <!--c# progress bar-->
+          <div>
+            <h4>c#</h4>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-info"
+                role="progressbar"
+                aria-valuenow="70"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width:70%;"
+              ></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end  of skills section-->
+
+    <!--start of jumbo section-->
+    <section class="jumbo">
+      <div class="jumbotron text-center">
+        <div>
+          <h1>Next project</h1>
+          <a href="#">Get a quote</a>
+        </div>
+      </div>
+
+    </section>
+
+
+      <!-- end of jumbo section -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
