--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!--Start of Services section-->
     <section id="services">
-      <div class="container">
+      <div class="container-fluid">
         <!--    start of header-->
         <div class="header text-center">
           <h1><strong>services</strong></h1>
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 col-sm-6 services-container text-center">
+        <div class="col-md-4, col-sm-6 services-container text-center">
           <i class="fa fa-mobile"></i>
           <h2><strong>Services</strong></h2>
           <p class="text-muted">
@@ -88,7 +88,7 @@
           </p>
         </div>
 
-        <div class="col-md-4 col-sm-6 services-container text-center">
+        <div class="col-md-4, col-sm-6 services-container text-center">
           <i class="fa fa-archive"></i>
           <h2><strong>Services</strong></h2>
           <p class="text-muted">
@@ -99,7 +99,7 @@
           </p>
         </div>
 
-        <div class="col-md-4 col-sm-6 services-container text-center">
+        <div class="col-md-4, col-sm-6 services-container text-center">
           <i class="fa fa-cubes"></i>
           <h2><strong>Services</strong></h2>
           <p class="text-muted">
@@ -110,7 +110,7 @@
           </p>
         </div>
 
-        <div class="col-md-4 col-sm-6 services-container text-center">
+        <div class="col-md-4, col-sm-6 services-container text-center">
           <i class="fa fa-envelope"></i>
           <h2><strong>Services</strong></h2>
           <p class="text-muted">
@@ -121,7 +121,7 @@
           </p>
         </div>
 
-        <div class="col-md-4 col-sm-6 services-container text-center">
+        <div class="col-md-4, col-sm-6 services-container text-center">
           <i class="fa fa-magnet"></i>
           <h2><strong>Services</strong></h2>
           <p class="text-muted">
@@ -291,11 +291,89 @@
           <a href="#">Get a quote</a>
         </div>
       </div>
+    </section>
+    <!-- end of jumbo section -->
 
+    <!-- start of work section -->
+    <section id="work">
+      <div class="container-fluid">
+        <!--header-->
+        <div class="header text-center">
+          <h1><strong>Our work</strong></h1>
+          <div class="header-underline"></div>
+          <p class="text-muted">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, quae.
+          </p>
+        </div>
+        <!--end header-->
+        <div class="row">
+          <div class="img-container">
+
+            <!-- col 1-->
+            <div class="col-md-3, col-ms-6">
+              <div class="img-box">
+                <a href="#">
+                  <img
+                    src="http://lorempixel.com/400/200/animals"
+                    class="img-responsive"
+                    style="width:100%"
+                    alt="name of the image"
+                  />
+                </a>
+              </div>
+            </div>
+            <!--end col 1-->
+
+            <!-- col 2-->
+            <div class="col-md-3, col-ms-6">
+              <div class="img-box">
+                <a href="#">
+                  <img
+                    src="http://lorempixel.com/400/200/city"
+                    class="img-responsive"
+                    style="width:100%"
+                    alt="name of the image"
+                  />
+                </a>
+              </div>
+            </div>
+            <!--end col 2-->
+
+            <!-- col 3-->
+            <div class="col-md-3, col-ms-6">
+              <div class="img-box">
+                <a href="#">
+                  <img
+                    src="http://lorempixel.com/400/200/fashion"
+                    class="img-responsive"
+                    style="width:100%"
+                    alt="name of the image"
+                  />
+                </a>
+              </div>
+            </div>
+            <!--end col 3-->
+
+            <!-- col 4-->
+            <div class="col-md-3, col-ms-6">
+              <div class="img-box">
+                <a href="#">
+                  <img
+                    src="http://lorempixel.com/400/200/food"
+                    class="img-responsive"
+                    style="width:100%"
+                    alt="name of the image"
+                  />
+                </a>
+              </div>
+            </div>
+            <!--end col 4-->
+          </div>
+        </div>
+      </div>
     </section>
 
-
-      <!-- end of jumbo section -->
+    <!-- end of work section -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
